Modified ChangeLog. Fixed the filter class for most of the tutorials.
Modified ChangeLog.
Fixed the filter class for most of the tutorials.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -152,7 +152,7 @@
 </p>
 <p>
   Select the original text layer (the one you added some color to) and do the Alpha to Selection trick again. 
-  Right click on the image and use Select &gt; grow. This will make the new selection larger by a number of pixels - 
+  Right click on the image and use <span class="filter">&lt;Image&gt;Select-&gt;Grow</span>. This will make the new selection larger by a number of pixels - 
   I used a value of 2 pixels. Once you have a selection, be sure to reselect the new layer (outline) so that you can 
   fill it (step 17). And below is what it looks like.
 </p>
@@ -220,7 +220,7 @@
 <p>
   This. Click inside the bezier path once you close it (close it by clicking one the first node). 
   This will create a selection. 
-  Use Select &gt; feather to feather (blur) the selection. I used a value of about 10 pixels.
+  Use <span class="filter">&lt;Image&gt;Select-&gt;Feather</span> to feather (blur) the selection. I used a value of about 10 pixels.
 </p>
 
 <div class="subtitle">Step 23</div>
@@ -247,7 +247,7 @@
   <img src="logo-24.png" alt=""/>
 </p>
 <p>
-  The image should now look a little like this (Right Image). Don't worry, it'll look better soon.
+  The image should now look a little like this. Don't worry, it'll look better soon.
 </p>
 
 <div class="subtitle">Step 26</div>
@@ -280,8 +280,9 @@
 </p>
 <p>
   With a little playing around you can get to this. I duplicated the rust layer and moved them (the original rust and the copy) down the stack until 
-  the highlight and lowlight layers were above them. I also duplicated the original text layer, switched on Keep Trans., and used Render &gt; Clouds &gt; Noise to add
-  a bit of interest to the layer. Try using the Curves tool to help with this. You may also notice that the outline layer is blurred. Sometimes this can help.
+  the highlight and lowlight layers were above them. I also duplicated the original text layer, switched on Keep Trans., and used 
+  <span class="filter">&lt;Image&gt;Render-&gt;Clouds-&gt;Solid Noise</span> to add a bit of interest to the layer. Try using the Curves tool to help with this. 
+  You may also notice that the outline layer is blurred. Sometimes this can help.
   The idea is, try stuff and find out.
 </p>
 <p>
