--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -19,7 +19,7 @@
 </p>
 <p>
   In this tutorial I explore the select by color option to remove a particular color from the image. The first step, after you have loaded the image of course,
-  is to click on the image with the right mouse button, and choose the option "select-&gt;by color" as seen above:
+  is to click on the image with the right mouse button, and choose the option <span class="filter">&lt;Image&gt;Select-&gt;By Color</span> as seen above:
 </p>
 
 <div class="subtitle">Step 2</div>
@@ -58,7 +58,8 @@
   <img src="img7_step5.png" alt=""/>
 </p>
 <p>
-  With the selection complete and with an alpha channel just choose from the image menu "Edit-&gt;Clear", and the image background will e gone.
+  With the selection complete and with an alpha channel just choose from the image menu <span class="filter">&lt;Image&gt;Edit-&gt;Clear</span>, 
+  and the image background will e gone.
 </p>
 
 <div class="subtitle">Step 6</div>
