--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -22,7 +22,7 @@
 <p>
    I zoomed in on the image, 4:1 ratio, as this is almost pixel by pixel work. I ended up using the 5 x 5 fuzzy brush that came with the GIMP tarball.
    As usual, your choice depends on the resolution of your image. A fuzzy brush is highly recommended. On this web sized image, the 3 x 3 fuzzy brush 
-   didn't work fast enough. As always, you can Edit--&gt;Undo until you make the right selections.
+   didn't work fast enough. As always, you can <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you make the right selections.
 </p>
 
 <div class="subtitle">Step 2</div>
@@ -52,7 +52,7 @@
    <br />
    tigert warned that this method can leave the white spots in the eyes slightly green. I have found this to be true, however so far it hasn't been enough green 
    to worry about. Given a photo where the green will make a difference, you can use the same tool combination on the green channel, just move the opacity slider 
-   to a smaller percentage. Edit--&gt;Undo until you get it right.
+   to a smaller percentage. <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you get it right.
 </p>
 
 <div class="subtitle">Final</div>
