--- a/tutorials/Film_Grain/index.html
+++ b/tutorials/Film_Grain/index.html
@@ -45,8 +45,9 @@
   <img src="sailboat-08-grain-masked-rebalanced.jpg" alt=""/>
 </p>
 <p>
-  First, desaturate the image. You can do this using &lt;Image&gt;/Colors/Desaturate or the Desaturate filter provided with the MathMap plugin.
-  (The latter actually returns the luminosity of an image, not a desaturated version. Technically, it's better, but it's unnecessary for most images.)
+  First, desaturate the image. You can do this using <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span> or the <b>Desaturate</b> filter 
+  provided with the MathMap plugin.(The latter actually returns the luminosity of an image, not a desaturated version. 
+  Technically, it's better, but it's unnecessary for most images.)
 </p>
 
 <div class="subtitle">Step 2</div>
@@ -74,8 +75,8 @@
   So far, so good. But the noise is too strong in the shadows and highlights of the image. To demphasize it, we can use a layer mask.
   <br />
   First, add a layer mask to the noise layer. Then, make a copy of the image, gaussian blur it with a radius of 15 pixels, and paste 
-  the blurred image into the layer mask. Use &lt;Image&gt;/Colors/Invert to swap bright for dark. This will cause the grain to show through
-  strongly in the shadows and midtones, but not in the highlights.
+  the blurred image into the layer mask. Use <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Invert</span> to swap bright for dark. 
+  This will cause the grain to show through strongly in the shadows and midtones, but not in the highlights.
 </p>
 
 <div class="subtitle">Step 5</div>
@@ -83,7 +84,8 @@
   <img src="sailboat-08-grain-masked-rebalanced.jpg" alt=""/>
 </p>
 <p>
-  Next, use <Image>/Colors/Curves to adjust the value of the layer mask. We want to make the midtones bright, and the shadows and hightlights dark.
+  Next, use <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Curves</span> to adjust the value of the layer mask. 
+  We want to make the midtones bright, and the shadows and hightlights dark.
   You can adjust the curves to taste. Curves Dialog This increases the grain in the midtones, and reduces it elsewhere.
   <br />
   Here's the Layers, Channels &amp; Paths dialog for the finished image.
@@ -94,9 +96,10 @@
   You can use various brushes in the mask layer to selectively edit the grain. You can also use the bucket tool in Pattern Fill, Grey Addition 
   mode to fill a selection with grain directly.
   <br />
-  Many kinds of noise can be created using &lt;Image&gt;/Filters/Noise/Scatter HSV. You can apply this directly to an image, or to a film grain pattern.
+  Many kinds of noise can be created using <span class="filter">&lt;Image&gt;Filters-&gt;Noise-&gt;Scatter HSV</span>. You can apply this directly to an image, 
+  or to a film grain pattern.
   <br />
-  To denoise an image, try &lt;Image&gt;/Filters/Blur/Selective Guassian Blur. It's slow, but very nifty.
+  To denoise an image, try <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Selective Guassian Blur</span>. It's slow, but very nifty.
 </p>
 
 <p>
