*** empty log message ***

--- a/links.html
+++ b/links.html
@@ -4,14 +4,34 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP Links</div>
+This page contains links to the most interesting GIMP-sites:
+<ul>
+    <li> <a href="#tuts">GIMP-tutorials</a>
+    <li> <a href="#more">even more GIMP-links</a>
+</ul>
+
+<p>&nbsp;</p>
+<a name="tuts">
 <div class="subtitle">Tutorials</div>
 <p>
-  Text goes here
+  <A href="http://gug.sunsite.dk/?page=tutorials">Tutorials-page from GIMP Usergroup (GUG)</a><br>
+  The GUG-website has some cool GIMP-tutorials online.
 </p>
-<div class="subtitle">Galleries</div>
 <p>
-  Text goes here
+  <A href="http://empyrean.lib.ndsu.nodak.edu/~nem/gimp/tuts/">Pointers to GIMP-tutorials</a><br>
+  This site has pointers to GIMP-tutorials all over the Internet. Some are outdated, but most tutorials show nice GIMP-tips &amp; tricks.
 </p>
 
+<p>&nbsp;</p>
+<a name="more">
+<div class="subtitle">More GIMP-links</div>
+<p>
+  <A href="http://gimp.pagina.nl">GIMP-startpagina</a><br>
+  Just one page, but contains the most up-to-date collection of links to GIMP-sites. One drawback: this page is in Dutch.
+</p>
+<p>
+  <A href="http://gimp.start4all.com">GIMP-startpage</a> <small>(under construction)</small><br>
+  Essentially the same as the one above, but this time in English.
+</p>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
