Modified ChangeLog. Add Sam Jones to the tutorial authors. Fixed the class
Modified ChangeLog.
Add Sam Jones to the tutorial authors.
Fixed the class tags for the filters.
Add the first port of the Image Pipes 2 tutorial.

--- a/team.html
+++ b/team.html
@@ -36,6 +36,7 @@
   <li>Kevin Turner</li>
   <li>Marco (LM) Lamberto</li>
   <li>Mel Boyce</li>
+  <li>Sam Jones</li>
   <li>Seth Burgess</li>
   <li>Simon Budig</li>
   <li>Tuomas Kuosmanen</li>
