--- a/tutorials/Photo_Edit/Blending_Exposures/index.html
+++ b/tutorials/Photo_Edit/Blending_Exposures/index.html
@@ -155,7 +155,7 @@
 </p>
 <p>
   Since I'm not sure if these tools have the ability to work across layers (as they do in Photoshop), I duplicate the image (Ctrl+D) and flatten the duplicate 
-  (<span class="filter">Layers/Flatten Image</span>) and work on it. This has the additional benefit that if I ever mess up the blending job too badly I can 
+  (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>) and work on it. This has the additional benefit that if I ever mess up the blending job too badly I can 
   always easily start over at this step.
 </p>
 <p>
