--- a/tutorials/Photo_Edit/Blown_Out_Highlights/index.html
+++ b/tutorials/Photo_Edit/Blown_Out_Highlights/index.html
@@ -58,9 +58,9 @@
 <p>
   The first step is to create a channel mask to be able to mask out parts of the image we don't want to affect. I'll use this for the main "pixel graft".
   <br />
-  Duplicate the original image (<span class="filter">Image/Duplicate</span> or Ctrl+D).
+  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or Ctrl+D).
   <br />
-  In the duplicate, select <span class="filter">Image/Colors/Threshold</span>. In the threshold dialog box, drag to select the very right 
+  In the duplicate, select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>. In the threshold dialog box, drag to select the very right 
   (extreme highlights) portion of the histogram. Alternatively, you can type in the lower bound, as I did here (250).
   <br /><br />
   This causes all the pixels in the image from 250-255 to go white and all the others to go black.
@@ -76,7 +76,7 @@
   <img src="image-channel.jpg" alt=""/>
 </p>
 <p>
-  Go back to the original image, and bring up the Layers and Channels dialog (<span class="filter">Layers/Layers, Channels &amp; Paths</span>, or Ctrl+L). 
+  Go back to the original image, and bring up the Layers and Channels dialog (<span class="filter">&lt;Image&gt;Layers-&gt;Layers, Channels &amp; Paths</span>, or Ctrl+L). 
   Click on the Channels tab and add a new channel by clicking on the new channel button.
 </p>
 
