--- a/tutorials/Photo_Edit/Blur_Overlays/index.html
+++ b/tutorials/Photo_Edit/Blur_Overlays/index.html
@@ -59,7 +59,8 @@
 <p>
   In the Layers dialog, select the Blur Overlay layer. In the "Mode" drop-down box, select "Overlay".
   <br />
-  Now go back to the image window and apply a Levels (<span class="filter">Image/Colors/Levels</span>) or Curves (<span class="filter">Image/Colors/Curves</span>) 
+  Now go back to the image window and apply a Levels (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Levels</span>) or Curves 
+  (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Curves</span>) 
   and adjust it until the overall image has the proper brightness. You'll usually find it necessary to adjust the gamma slider (middle slider in Levels) down. 
   You are only adjusting the upper layer, but you are viewing the cumulative effect of the layer blend.
   <br /><br />
@@ -75,7 +76,7 @@
   <img src="image-overlay-blur.jpg" alt=""/>
 </p>
 <p>
-  Go back to the image window and right click, selecting <span class="filter">Filters/Blur/Gaussian Blur</span>. 
+  Go back to the image window and right click, selecting <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur</span>. 
   You will need to experiment to find the best value, but typically a value between 10 and 30 will do nicely.
   <br /><br />
   Voila! If you don't like the effect, you can undo the blur (Ctrl+Z) and redo it (Shift+Alt+F) with a different value.
@@ -99,7 +100,7 @@
 <p>
   Duplicate the image (Ctrl+D).
   <br />
-  Flatten the duplicate (<span class="filter">Layers/Flatten Image</span>).
+  Flatten the duplicate (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>).
 </p>
 
 <div class="subtitle">Step 6</div>
@@ -108,7 +109,7 @@
   <img src="image-threshold.jpg" alt=""/>
 </p>
 <p>
-  In the duplicate, run a threshold filter (<span class="filter">Image/Colors/Threshold</span>).
+  In the duplicate, run a threshold filter (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>).
   <br />
   In the threshold histogram, click and drag to the right to select all the pixels at the upper end of the scale. 
   Retry or adjust the selection using the number controls in the dialog box until the display shows most of the pixels you want to preserve as white and all the rest black.
@@ -140,8 +141,8 @@
   <img src="image-threshold-blur-invert.jpg" alt=""/>
 </p>
 <p>
-  Invert the mask (<span class="filter">Image/Colors/Invert</span>), so that the white parts correspond to the parts of the combined layers that you want to keep 
-  and the black parts correspond to the parts that should only reflect the original image (the highlights).
+  Invert the mask (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Invert</span>), so that the white parts correspond to the parts of 
+  the combined layers that you want to keep and the black parts correspond to the parts that should only reflect the original image (the highlights).
 </p>
 
 <div class="subtitle">Step 9</div>
