--- a/tutorials/Photo_Edit/Channel_Mixer/index.html
+++ b/tutorials/Photo_Edit/Channel_Mixer/index.html
@@ -35,7 +35,7 @@
   <img src="grayscale.jpg" alt=""/>
 </p>
 <p>
-  Here is what I get if I use the standard mode change: right-click and select <span class="filter">Image/Mode/Grayscale</span>. 
+  Here is what I get if I use the standard mode change: right-click and select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>. 
   It looks kind of flat. I could try to tweak the result with curves, I suppose.
 </p>
 
@@ -44,7 +44,7 @@
   <img src="desaturate.jpg" alt=""/>
 </p>
 <p>
-  Here is what I get if I use desaturate instead: right-click and select <span class="filter">Image/Colors/Desaturate</span>. 
+  Here is what I get if I use desaturate instead: right-click and select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>. 
   If anything, this one looks a little worse.
   <br /><br />
   <b>Note:</b> A mode change to grayscale is not the same as desaturation! More on this in the Tips section below.
@@ -55,7 +55,7 @@
   <img src="channelmixer.jpg" alt=""/>
 </p>
 <p>
-  Try the channel mixer! Right-click on the original image and select <span class="filter">Filters/Color/Channel Mixer</span>. 
+  Try the channel mixer! Right-click on the original image and select <span class="filter">&lt;Image&gt;Filters-&gt;Color-&gt;Channel Mixer</span>. 
   You'll get a dialog box like the one at right. Click the checkbox that says Monochrome. Make sure the preview checkbox is also checked. 
   You can experiment with the "Preserve Luminosity" checkbox.
 </p>
@@ -82,15 +82,15 @@
 </p>
 <ul>
   <li>I find it helpful to have the conventional grayscale conversion in another window for comparison purposes. 
-  Duplicate the original image (<span class="filter">Image/Duplicate</span> or Ctrl+D) and convert the duplicate to grayscale using 
-  <span class="filter">Image/Mode/Grayscale</span>. Then go back and run the channel mixer on the original image.
+  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or Ctrl+D) and convert the duplicate to grayscale using 
+  <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>. Then go back and run the channel mixer on the original image.
   </li>
   <li>Sometimes it's helpful to see the individual RGB channels before you start mixing, because you can better visualize what you are mixing. 
-  To examine them, right click on the original image and select <span class="filter">Image/Mode/Decompose</span>. 
+  To examine them, right click on the original image and select <span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Decompose</span>. 
   Make sure that RGB is checked in the decompose dialog box.
   </li>
-  <li>It was rather shocking to me to discover that converting to grayscale (<span class="filter">Image/Mode/Grayscale</span>) and 
-  desaturating (<span class="filter">Image/Colors/Desaturate</span>) are not the same as far as their effect on the RGB channel ratio! 
+  <li>It was rather shocking to me to discover that converting to grayscale (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>) and 
+  desaturating (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>) are not the same as far as their effect on the RGB channel ratio! 
   Using the channel mixer as an example, try a setting of RED=60%, GREEN=30% and BLUE=10%. This is approximately what the grayscale mode change does. 
   On the other hand, a mix of RED=34%, GREEN=33% and BLUE=33% is approximately what desaturation does.
   </li>
