--- a/tutorials/Photo_Edit/ND_Filter/index.html
+++ b/tutorials/Photo_Edit/ND_Filter/index.html
@@ -133,7 +133,7 @@
 </p>
 <p>
   You'll have to flatten the image if you are saving it to a typical image format like TIFF or JPEG (but not if you are saving to the GIMP's native XCF format). 
-  To do that, right-click on the image and select <span class="filter">Layers/Flatten Image</span>.
+  To do that, right-click on the image and select <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>.
 </p>
 
 <div class="subtitle">Tips</div>
