--- a/tutorials/Photo_Edit/Selective_Color/index.html
+++ b/tutorials/Photo_Edit/Selective_Color/index.html
@@ -36,10 +36,10 @@
   Duplicate the image (Ctrl+D).
   <br />
   By whatever method suits you best, convert the duplicate image to B&amp;W. Once you have gotten the B&amp;W version that you like, 
-  change it back to RGB mode (<span class="filter">Image/Mode/RGB</span>).
+  change it back to RGB mode (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;RGB</span>).
   <br /><br />
   In this example, I tried the <a href="/tutorials/Photo_Edit/Channel_Mixer/">channel mixer</a>, but ended up in this case preferring 
-  a simple conversion to grayscale (<span class="filter">Image/Mode/Grayscale</span>), then back to RGB.
+  a simple conversion to grayscale (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>), then back to RGB.
 </p>
 
 <div class="subtitle">Step 2</div>
@@ -88,7 +88,7 @@
 <p>
   Make sure that Black is selected as the foreground color in the toolbox. We're going to paint transparency into the layer mask to reveal the color image below.
   <br />
-  Bring up the Brushes dialog (<span class="filter">Dialogs/Brushes</span>) and select a big brush. 
+  Bring up the Brushes dialog (<span class="filter">&lt;Image&gt;Dialogs-&gt;Brushes</span>) and select a big brush. 
   In the toolbox, select the paint tool (<img src="paint.jpg" alt=""/>). Begin painting the interior of the parts you want to be in color.
 </p>
 
