--- a/tutorials/Photo_Edit/ContrastMask/index.html
+++ b/tutorials/Photo_Edit/ContrastMask/index.html
@@ -64,7 +64,8 @@
   <img src="image2.jpg" alt=""/>
 </p>
 <p>
-  Select the Contrast Mask layer. Go to the image window and right-click, selecting <span class="filter">Image/Colors/Desaturate</span>. The image should look B&amp;W.
+  Select the Contrast Mask layer. Go to the image window and right-click, selecting <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>. 
+  The image should look B&amp;W.
 </p>
 
 <div class="subtitle">Step 4</div>
@@ -72,8 +73,8 @@
   <img src="image3.jpg" alt=""/>
 </p>
 <p>
-  Right-click and select <span class="filter">Image/Colors/Invert</span>. You now have a B&amp;W negative image of your original. We're going to combine this with the original 
-  (light with dark, dark with light) to reduce the overall contrast.
+  Right-click and select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Invert</span>. You now have a B&amp;W negative image of your original. 
+  We're going to combine this with the original (light with dark, dark with light) to reduce the overall contrast.
 </p>
 
 <div class="subtitle">Step 5</div>
@@ -93,7 +94,8 @@
   <img src="image5.jpg" alt=""/>
 </p>
 <p>
-  Go back to the image window and right click, selecting <span class="filter">Filters/Blur/Gaussian Blur</span>. You will need to experiment to find the best value, 
+  Go back to the image window and right click, selecting <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur</span>. 
+  You will need to experiment to find the best value, 
   but typically a value between 10 and 30 will do nicely. After blurring the contrast mask the overall image should now look much sharper.
   <br /><br />
   Click on the "eye" next to the Contrast Mask layer in the Layers dialog to rapidly compare the image with and without the mask. 
@@ -132,7 +134,7 @@
 </p>
 <p>
   You'll have to flatten the image if you are saving it to a typical image format like TIFF or JPEG (but not if you are saving to the GIMP's native XCF format). 
-  To do that, right-click on the image and select <span class="filter">Layers/Flatten Image</span>.
+  To do that, right-click on the image and select <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>.
 </p>
 
 <div class="subtitle">Fine Tuning</div>
