Links-page now contains the best GIMP-links available (IMHO)

--- a/links.html
+++ b/links.html
@@ -4,11 +4,58 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP Links</div>
-This page contains links to the most interesting GIMP-sites:
+This page contains the best links to interesting GIMP-sites:
 <ul>
-    <li> <a href="#tuts">GIMP-tutorials</a>
-    <li> <a href="#more">even more GIMP-links</a>
+    <li> <a href="#clubs">Communities</a>
+    <li> <a href="#created">Created with GIMP</a>
+    <li> <a href="#mailing">Mailinglists</a>
+    <li> <a href="#tuts">Tutorials</a>
+    <li> <a href="#more">More GIMP-links</a>
 </ul>
+
+<p>&nbsp;</p>
+<a name="clubs">
+<div class="subtitle">Clubs &amp; communities</div>
+<p>
+  <A href="http://www.gimpforce.org">GIMP Usergroup (GUG)</a><br>
+  Meet fellow-GIMP-users here and see what they created using GIMP
+</p>
+<p>
+  <A href="http://groups.yahoo.com/group/thegimp2/">English GIMP-club</a><br>
+  English-spoken community to discuss using The GIMP
+</p>
+<p>
+  <A href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br>
+  Dutch-spoken community to promote GIMP-usage in The Netherlands
+</p>
+
+<p>&nbsp;</p>
+<a name="created">
+<div class="subtitle">Created with GIMP</div>
+<p>
+  <A href="http://gug.sunsite.dk/gallery.php">Galleries from GUG</a><br>
+  The largest collection of GIMP-created graphics
+</p>
+<p>
+  <A href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br>
+  Dutch-spoken community to promote GIMP-usage in The Netherlands.
+</p>
+<p>
+  <A href="http://dmoz.org/Arts/Visual_Arts/Computer_Graphics/The_GIMP/">Computer-graphics with GIMP</a><br>
+  This OpenDirectoryProject-category holds links to galleries of images created with GIMP
+</p>
+
+<p>&nbsp;</p>
+<a name="mailing">
+<div class="subtitle">Active mailinglists</div>
+<p>
+  <A href="http://groups.yahoo.com/group/gimpwin-users/">GIMPwin-users</a><br>
+  especially for users of the Windows-version of GIMP
+</p>
+<p>
+  <A href="http://groups.yahoo.com/group/gimpwin-dev/">GIMPwin-dev</a><br>
+  for anyone who is interested in developing for the Windows-version of GIMP
+</p>
 
 <p>&nbsp;</p>
 <a name="tuts">
@@ -26,12 +73,25 @@ This page contains links to the most interesting GIMP-sites:
 <a name="more">
 <div class="subtitle">More GIMP-links</div>
 <p>
-  <A href="http://gimp.pagina.nl">GIMP-startpagina</a><br>
-  Just one page, but contains the most up-to-date collection of links to GIMP-sites. One drawback: this page is in Dutch.
+  <A href="http://gimp.pagina.nl">GIMP-startpagina</a> <small>(Dutch version)</small><br>
+  Just one page, but contains the most up-to-date collection of links to GIMP-sites
 </p>
 <p>
-  <A href="http://gimp.start4all.com">GIMP-startpage</a> <small>(under construction)</small><br>
-  Essentially the same as the one above, but this time in English.
+  <A href="http://gimp.start4all.com">GIMP-startpage</a> <small>(English version)</small><br>
+  Essentially the same as the one above, but this time in English
 </p>
+<p>
+  <A href="http://dmoz.org/Computers/Software/Graphics/Image_Editing/The_GIMP/">GIMP-category from ODP</a><br>
+  This OpenDirectoryProject-category holds links to GIMP-sites (like this page)
+</p>
+<p>
+  <A href="http://dmoz.org/World/Nederlands/Computers/Graphics/Software/GIMP/">Dutch GIMP-category from ODP</a><br>
+  This OpenDirectoryProject-category contains only links to Dutch GIMP-sites
+</p>
+<br><br>
+<a href="http://www.start4all.com/webSite/suggestions.php?subject=gimp">Add a new link</a><br><br>
+<b>Disclaimer:</b> this page does not contain all GIMP-links available. This is just a nice overview.<br>
+More links can be found on <a href="http://gimp.start4all.com">the GIMP-startpage</a> instead.</b>
+
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
