Modified ChangeLog. Add the Perlotine and Image Map tutorials to the list
Modified ChangeLog.
Add the Perlotine and Image Map tutorials to the list of HTML tutorials.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -136,9 +136,12 @@
 </p>
 
 <div class="subtitle">HTML</div>
-<p><a href="html/title1.html">Title1</a></p>
-<p><a href="html/title2.html">Title2</a></p>
-<p><a href="html/title3.html">Title3</a></p>
+<p>
+  <a href="html/Perlotine/">Perlotine</a> Get your image in place with the help of perlotine and tables.
+</p>
+<p>
+  <a href="html/Image_Map/">Image Map</a> Use GIMP to create a nice Image Map.
+</p>
 
 
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
